[gd_scene load_steps=37 format=3 uid="uid://b62lvo1x4606q"]

[ext_resource type="Script" uid="uid://byhqvf6snqm1y" path="res://player/player.gd" id="1_4flbx"]
[ext_resource type="Texture2D" uid="uid://ba1b5dojprabq" path="res://player/Rat sprites.png" id="2_onrkg"]
[ext_resource type="Script" uid="uid://deh3mej2v5gpk" path="res://managers/stats_manager.gd" id="3_hqtel"]
[ext_resource type="Script" uid="uid://bhsy7bm6qnu1a" path="res://managers/ability_manager.gd" id="4_sweqy"]
[ext_resource type="PackedScene" uid="uid://d3eieij8iep6v" path="res://scenes/basic_gun.tscn" id="5_qjkh3"]
[ext_resource type="PackedScene" uid="uid://c4qga78ih5q7y" path="res://abilities/weapons/ricochet_gun.tscn" id="6_g6k8r"]
[ext_resource type="PackedScene" uid="uid://b7wjslcl0ihv" path="res://explosion_ability.tscn" id="7_boad6"]
[ext_resource type="PackedScene" uid="uid://be4o6fnscja2n" path="res://confusion_spoon.tscn" id="8_rgyib"]
[ext_resource type="PackedScene" uid="uid://djilttla6hs11" path="res://sword_ability.tscn" id="9_hg6s5"]
[ext_resource type="PackedScene" uid="uid://b3d5hm53378w0" path="res://sword.tscn" id="10_8t03j"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_onrkg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("2_onrkg")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("2_onrkg")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("2_onrkg")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("2_onrkg")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = ExtResource("2_onrkg")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = ExtResource("2_onrkg")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = ExtResource("2_onrkg")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_op7ga"]
atlas = ExtResource("2_onrkg")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13i1"]
atlas = ExtResource("2_onrkg")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pylmc"]
atlas = ExtResource("2_onrkg")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbfsw"]
atlas = ExtResource("2_onrkg")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tmop"]
atlas = ExtResource("2_onrkg")
region = Rect2(240, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("2_onrkg")
region = Rect2(0, 53, 48, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("2_onrkg")
region = Rect2(48, 53, 48, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("2_onrkg")
region = Rect2(96, 53, 48, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = ExtResource("2_onrkg")
region = Rect2(144, 53, 48, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = ExtResource("2_onrkg")
region = Rect2(192, 53, 48, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = ExtResource("2_onrkg")
region = Rect2(240, 53, 48, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ahtn"]
atlas = ExtResource("2_onrkg")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lmhl"]
atlas = ExtResource("2_onrkg")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx0e4"]
atlas = ExtResource("2_onrkg")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm5j8"]
atlas = ExtResource("2_onrkg")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hik5"]
atlas = ExtResource("2_onrkg")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtqh7"]
atlas = ExtResource("2_onrkg")
region = Rect2(240, 96, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_4flbx"]
animations = [{
"frames": [],
"loop": true,
"name": &"roll",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pylmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbfsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tmop")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ahtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lmhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx0e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm5j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hik5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtqh7")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_4flbx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_onrkg")

[node name="rat_animation" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 2)
scale = Vector2(1.4791666, 1.3958334)
sprite_frames = SubResource("SpriteFrames_4flbx")
animation = &"walk_right"

[node name="StatsManager" type="Node" parent="."]
script = ExtResource("3_hqtel")

[node name="AbilityManager" type="Node" parent="."]
script = ExtResource("4_sweqy")

[node name="BasicGun" parent="AbilityManager" instance=ExtResource("5_qjkh3")]

[node name="RicochetGun" parent="AbilityManager" instance=ExtResource("6_g6k8r")]

[node name="ExplosionAbility" parent="AbilityManager" instance=ExtResource("7_boad6")]

[node name="ConfusionSpoon" parent="AbilityManager" instance=ExtResource("8_rgyib")]

[node name="SwordAbility" parent="AbilityManager" instance=ExtResource("9_hg6s5")]
sword_scene = ExtResource("10_8t03j")
